feat: centralized types, removed mock data, component cleanup
moved hospital types to types dir, removed mock data and deleted unused comps